==> ExploreEmbedded/Code-Libraries/CodeLibraries/8051/EEPROM/EEPROM_UART/Eeprom_StringRdWr_Uart/uart.c <==
#include <stdarg.h>
#include "uart.h"

void UART_Init(uint32_t var_baudRate_u32)
{	
	TMOD |= 0x20; //Timer1 in Mode2.
    SCON=0x50;    // Asynchronous mode, 8-bit data and 1-stop bit
    TR1=1;        //Turn ON the timer for Baud rate generation
	UART_SetBaudRate(var_baudRate_u32);
}

void UART_SetBaudRate(uint32_t var_baudRate_u32)
{
	sint8_t RegValue;

	if((var_baudRate_u32 >= C_MinBaudRate_U32) && (var_baudRate_u32<=C_MaxBaudRate_U32))
	{
		/* Check if the requested baudate is within range,
	     If yes then calculate the value to be loaded into baud rate generator. */
		RegValue = M_GetBaudRateGeneratorValue(var_baudRate_u32);
	}
	else
	{
		/*	 Invalid baudrate requested, hence set it to default baudrate of 9600 */
		RegValue = M_GetBaudRateGeneratorValue(9600);
	}

	TH1 = RegValue; 
}

char UART_RxChar()
{
    while(RI==0);	  // Wait till the data is received
    RI=0;             // Clear Receive Interrupt Flag for next cycle
    
	return(SBUF);	  // return the received char
}

void UART_TxChar(char var_uartData_u8)
{
	SBUF=var_uartData_u8; // Load the data to be transmitted
    while(TI==0);       // Wait till the data is trasmitted
    TI=0;		        //Clear the Tx flag for next cycle.
}
